plug-ins/file-jpeg/jpeg-icc.* has wrong license and copyright notices
plug-ins/file-jpeg/jpeg-icc.*
seems to be derived from http://www.littlecms.com/1/iccjpeg.c, but it appears that Marti Maria from Little-CMS doesn't actually own the copyright. See
- https://github.com/mm2/Little-CMS/tree/master/utils/jpgicc
- https://chromium.googlesource.com/chromium/src.git/+/master/third_party/iccjpeg/
Marti added the license file relatively recently, which is probably what created the confusion.
I can't track this down to it's canonical source, but it seems that Thomas G. Lane is one of the copyright holders and it's under the IJG license.