plug-ins/file-jpeg/jpeg-icc.c
@@ -4,11 +4,7 @@ comment|/* jpeg-icc.c  *  * This file provides code to read and write Internatio
 end_comment
 
 begin_comment
-comment|/* This code was originally copied from the jpegicc tool as found in  * the lcms source code. This code comes with the following copyright  * notice:  *  * Little cms  * Copyright (C) 1998-2004 Marti Maria  *  *  Permission is hereby granted, free of charge, to any person  *  obtaining a copy of this software and associated documentation  *  files (the "Software"), to deal in the Software without  *  restriction, including without limitation the rights to use, copy,  *  modify, merge, publish, distribute, sublicense, and/or sell copies  *  of the Software, and to permit persons to whom the Software is  *  furnished to do so, subject to the following conditions:  *  * The above copyright notice and this permission notice shall be  *  included in all copies or substantial portions of the Software.  */
-end_comment
-
-begin_comment
-comment|/* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,  * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF  * MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND  * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS  * BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN  * ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN  * CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE  * SOFTWARE.  */
+comment|/* This code was originally proposed for the Independent JPEG Group's  * software, but that fell through, and only recently got merged into  * libjpeg-turbo. This code comes with the following copyright notice:  *  * Copyright (C) 1997-1998, Thomas G. Lane, Todd Newman.  *  * For conditions of distribution and use, see the accompanying  * COPYING.ijg file.  */
 end_comment
 
 begin_include
